exclusion: exception when set factor to 0

When factor property is set to 0, transform just returns.
Adjust the minimum value to 1.

https://bugzilla.gnome.org/show_bug.cgi?id=743907